# pycubic

./: .gitignore  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: code_quality_scan.yml  python-package.yml
examples/: example.py
pycubic/: __init__.py  auth.py  cubic.py  cubic_access.py  user.py
